Project MiniTrello {
  database_type: "PostgreSQL"
  Note: '''
  Domain schema for MiniTrello.
  JWT token storage/blacklist tables (if enabled via Django package) are intentionally excluded
  because they are infrastructure-level and can be generated by the auth library.
  '''
}

Enum board_member_role {
  owner
  member
}

Enum card_priority {
  low
  medium
  high
  urgent
}

Enum activity_action {
  board_created
  board_updated
  board_deleted
  member_added
  member_removed
  column_created
  column_updated
  column_deleted
  column_reordered
  card_created
  card_updated
  card_moved
  card_deleted
  assignee_changed
  label_created
  label_updated
  label_deleted
  label_attached
  label_detached
  comment_created
  comment_updated
  comment_deleted
}

Table users {
  id bigint [pk, increment]
  username varchar(150) [not null, unique]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null, note: "Django password hash"]
  full_name varchar(255)
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    email
    username
  }
}

Table boards {
  id bigint [pk, increment]
  title varchar(255) [not null]
  description text
  created_by_id bigint [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    created_by_id
  }
}

Table board_memberships {
  id bigint [pk, increment]
  board_id bigint [not null]
  user_id bigint [not null]
  role board_member_role [not null, default: 'member']
  joined_at timestamptz [not null, default: `now()`]

  indexes {
    (board_id, user_id) [unique]
    board_id
    user_id
  }
}

Table board_columns {
  id bigint [pk, increment]
  board_id bigint [not null]
  title varchar(120) [not null]
  position int [not null, note: "0-based order index within board"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (board_id, position) [unique]
    board_id
  }
}

Table labels {
  id bigint [pk, increment]
  board_id bigint [not null]
  name varchar(64) [not null]
  color varchar(16) [not null, note: "HEX or token, e.g. #EF4444"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (board_id, name) [unique]
    board_id
  }
}

Table cards {
  id bigint [pk, increment]
  column_id bigint [not null]
  title varchar(255) [not null]
  description_markdown text
  priority card_priority [not null, default: 'medium']
  due_at timestamptz
  assignee_id bigint
  created_by_id bigint [not null]
  position int [not null, note: "0-based order index within column"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (column_id, position) [unique]
    column_id
    assignee_id
    priority
    due_at
  }
}

Table card_labels {
  id bigint [pk, increment]
  card_id bigint [not null]
  label_id bigint [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (card_id, label_id) [unique]
    card_id
    label_id
  }
}

Table card_comments {
  id bigint [pk, increment]
  card_id bigint [not null]
  author_id bigint [not null]
  body text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    card_id
    author_id
    (card_id, created_at)
  }
}

Table activity_logs {
  id bigint [pk, increment]
  board_id bigint [not null]
  actor_user_id bigint [not null]
  action activity_action [not null]
  card_id bigint
  column_id bigint
  comment_id bigint
  details jsonb [not null, default: `'{}'::jsonb`, note: "Structured payload for audit details (before/after, moved positions, etc.)"]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    board_id
    actor_user_id
    action
    (board_id, created_at)
    card_id
    column_id
  }
}

Ref: boards.created_by_id > users.id

Ref: board_memberships.board_id > boards.id [delete: cascade]
Ref: board_memberships.user_id > users.id [delete: cascade]

Ref: board_columns.board_id > boards.id [delete: cascade]

Ref: labels.board_id > boards.id [delete: cascade]

Ref: cards.column_id > board_columns.id [delete: cascade]
Ref: cards.assignee_id > users.id
Ref: cards.created_by_id > users.id

Ref: card_labels.card_id > cards.id [delete: cascade]
Ref: card_labels.label_id > labels.id [delete: cascade]

Ref: card_comments.card_id > cards.id [delete: cascade]
Ref: card_comments.author_id > users.id

Ref: activity_logs.board_id > boards.id [delete: cascade]
Ref: activity_logs.actor_user_id > users.id
Ref: activity_logs.card_id > cards.id [delete: set null]
Ref: activity_logs.column_id > board_columns.id [delete: set null]
Ref: activity_logs.comment_id > card_comments.id [delete: set null]
